# ENNCA

./: .gitignore  README.md  depth_estimation.ipynb  project_requirements.md
cifar/: net.py
depth_estimation/: depth_estimation.ipynb  pyproject.toml  readme.md  report.md  visualizations.py
depth_estimation/src/: bifpn.py  callbacks.py  data.py  decoder_block.py  depth_estimation_module.py  depth_net.py  efficientnet_wrapper.py  inception_block.py  main.py  net.py  requirements.txt  sep_conv_block.py  utils.py
depth_estimation/tb_logs/high_lr_with_augs/: events.out.tfevents.1686072351.5b093da480bb.23.4  events.out.tfevents.1686080478.5b093da480bb.23.5  hparams.yaml
depth_estimation/tb_logs/low_lr_with_augs/: events.out.tfevents.1686060974.5b093da480bb.23.0  events.out.tfevents.1686067006.5b093da480bb.23.1  hparams.yaml
depth_estimation/tb_logs/mid_lr_with_augs/: events.out.tfevents.1686067027.5b093da480bb.23.2  events.out.tfevents.1686072335.5b093da480bb.23.3  hparams.yaml
depth_estimation/tb_logs/without_augs/: events.out.tfevents.1686080495.5b093da480bb.23.6  events.out.tfevents.1686086010.5b093da480bb.23.7
homework/cifar/: cifar_dataset.py
homework/ffn/: FFN.ipynb
homework/image_emotion_recognition/: image_emotion_recognition.py
homework/quantization/: Copy_of_PTQ.ipynb
homework/training_template/record/no_transforms/version_0/: events.out.tfevents.1679667527.ae87b010ed92.799.0
homework/training_template/record/with_transforms/version_0/checkpoints/: train.ckpt
homework/video_audio_emotion_recognition/: video_audio_emotion_recognition.py
(+2 files in other folders)
